--- a/assets/scss/_config.scss
+++ b/assets/scss/_config.scss
@@ -6,7 +6,7 @@
 ul,
 ol {
   list-style: none;
-  margin: 0px;
+  margin: 0px !important;
 }
 a {
   text-decoration: none;
@@ -41,6 +41,7 @@ button {
 
 body {
   font-family: 'Poppins', sans-serif;
+  line-height: 0px;
 }
 
 .section_title h2 {
@@ -73,8 +74,6 @@ section {
   padding: 16px;
   font-weight: 600;
   text-transform: uppercase;
-  // width: 120px;
-  // height: 17px;
   &:hover {
     color: #3e424b;
   }
@@ -84,7 +83,21 @@ section {
 .slick-slide {
   outline: none !important;
 }
-.slick-dots{
+.slick-slider {
+  -webkit-user-select: text;
+  -khtml-user-select: text;
+  -moz-user-select: text;
+  -ms-user-select: text;
+  user-select: text;
+}
+.slick-list.draggable {
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+.slick-dots {
   position: absolute;
   bottom: -126px;
   left: 50%;
@@ -92,21 +105,76 @@ section {
   display: flex !important;
   justify-content: center;
   padding-top: 60px;
-  li{
+  li {
     width: 8px;
     height: 8px;
     border-radius: 50%;
     margin: 0px 5px;
-    border: 1px solid #3E424B;
+    border: 1px solid #3e424b;
     transition: all 0.6s linear;
-    &.slick-active{
-      background-color: #3E424B;
+    &.slick-active {
+      background-color: #3e424b;
       width: 16px;
       height: 8px;
       border-radius: 25px;
     }
-    button{
+    button {
       font-size: 0px;
+    }
+  }
+}
+
+// footer social links
+.social_links {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 95px;
+  li {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0px 16px;
+    border-radius: 50%;
+    background-color: transparent;
+    width: 48px;
+    height: 48px;
+    transition: all 0.6s ease-in-out;
+    position: relative;
+    a {
+      text-align: center;
+      margin: 0;
+      padding: 0;
+      i {
+        color: #3e424b;
+        font-size: 22px;
+        transition: all 0.6s ease-in-out;
+        margin: 0;
+        padding: 0;
+      }
+    }
+    &::after {
+      content: '';
+      position: absolute;
+      width: inherit;
+      height: inherit;
+      z-index: -1;
+      border-radius: 50%;
+      border-radius: 50%;
+      transform: scale(0);
+      transition: all 0.6s linear;
+    }
+    &:hover {
+      &::after {
+        transform: scale(1);
+        background-color: #5787ff;
+        // z-index: 1;
+      }
+      a {
+        i {
+          color: #fff;
+        }
+      }
     }
   }
 }
