--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -28,6 +28,7 @@ header {
           cursor: pointer;
           transition: all 0.4s ease-in-out;
           position: relative;
+          line-height: 25px;
           &::after {
             content: 'Menu';
             position: absolute;
@@ -92,7 +93,7 @@ header {
           margin: 0px 45.5px;
           position: relative;
           display: inline-block;
-          &:first-child{
+          &:first-child {
             margin-left: 0px;
           }
           &::after {
@@ -153,23 +154,12 @@ header {
     background-color: #fff;
     .container {
       .social_links {
-        display: flex;
-        align-items: center;
-        justify-content: center;
         li {
-          padding: 16px;
-          transform: translateY(0);
-          transition: all 0.4s linear;
-          border-radius: 50%;
-          a {
-            i {
-              color: #3e424b;
-              font-size: 28px;
-            }
+          &::after {
+            transition: all 0.6s ease-in-out;
           }
           &:hover {
-            box-shadow: 0px 10px 8px rgba(0, 0, 0, 0.2);
-            transform: translateY(-10px);
+            z-index: 1;
           }
         }
       }
