--- a/assets/scss/_work.scss
+++ b/assets/scss/_work.scss
@@ -12,135 +12,135 @@
 
     .project_slider {
       .slide_item {
-          display: flex;
-          justify-content: space-between;
-          align-items: center;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        transition: all 0.6s linear;
+        .slide_info {
+          .p_type {
+            font-size: 12px;
+            line-height: 14px;
+            color: #7a849a;
+          }
+          .p_title {
+            font-size: 46px;
+            line-height: 55px;
+            font-weight: 600;
+            color: #3e424b;
+            font-family: 'Oswald', sans-serif;
+          }
+          .v_project {
+            font-size: 12px;
+            line-height: 14px;
+            font-weight: 600;
+            color: #3e424b;
+            letter-spacing: 2px;
+            text-transform: uppercase;
+            display: flex;
+            align-items: center;
 
-            .slide_info{
-              .p_type{
-                font-size: 12px;
-                line-height: 14px;
-                color: #7A849A;
-              }
-              .p_title{
-                font-size: 46px;
-                line-height: 55px;
-                font-weight: 600;
-                color: #3E424B;
-                font-family: 'Oswald', sans-serif;
-              }
-              .v_project{
-                font-size: 12px;
-                line-height: 14px;
-                font-weight: 600;
-                color: #3E424B;
-                letter-spacing: 4px;
-                text-transform: uppercase;
-                display: flex;
-                align-items: center;
-                img{
-                  // display: inline-block;
-                  display: inline;
-                  outline: none !important;
-                }
-              }
+            img {
+              // display: inline-block;
+              display: inline;
+              outline: none !important;
             }
+          }
+        }
 
-        &.slick-cloned{
+        &.slick-cloned {
           opacity: 0 !important;
           pointer-events: none;
         }
-          &.slick-slide{
+        &.slick-slide {
           opacity: 0.2;
-          }
-          &.slick-active{
-            opacity: 1;
-            pointer-events: all;
-          }
-          // &.slick-slide {
-          //   opacity: 1;
-          // }
         }
-        // slick dots
-       
+        &.slick-active {
+          opacity: 1;
+          pointer-events: all;
+        }
+        // &.slick-slide {
+        //   opacity: 1;
+        // }
       }
+      // slick dots
     }
-    .drag_text {
-      position: absolute;
-      bottom: 160px;
-      right: 50%;
-      font-size: 12px;
-      font-weight: 600;
-      text-transform: uppercase;
-    }
+  }
+  .drag_text {
+    position: absolute;
+    bottom: 160px;
+    right: 50%;
+    font-size: 12px;
+    font-weight: 600;
+    text-transform: uppercase;
+  }
 }
 
-  .work_content {
-    .tab-text {
-      p {
-        font-size: 16px;
-        line-height: 38px;
-        color: #3E424B;
-        margin: 0;
-      }
+.work_content {
+  .tab-text {
+    p {
+      font-size: 16px;
+      line-height: 38px;
+      color: #3e424b;
+      margin: 0;
     }
+  }
 
-    .work_tab {
-      .nav-pills .nav-link {
-        color: #7A849A;
-        background-color: transparent;
-        text-transform: capitalize;
-        position: relative;
-        padding: 0;
-        margin: 0 20px;
+  .work_tab {
+    .nav-pills .nav-link {
+      color: #7a849a;
+      background-color: transparent;
+      text-transform: capitalize;
+      position: relative;
+      padding: 0;
+      margin: 0 20px;
 
+      &::before {
+        position: absolute;
+        content: '';
+        width: 0;
+        height: 2px;
+        background: #5787ff;
+        bottom: -15px;
+        left: 0;
+        transition: 0.3s;
+        -webkit-transition: 0.3s;
+        -moz-transition: 0.3s;
+        -ms-transition: 0.3s;
+        -o-transition: 0.3s;
+      }
+
+      &.nav-link.active {
         &::before {
-          position: absolute;
-          content: "";
-          width: 0;
-          height: 2px;
-          background: #5787FF;
-          bottom: -15px;
-          left: 0;
-          transition: .3s;
-          -webkit-transition: .3s;
-          -moz-transition: .3s;
-          -ms-transition: .3s;
-          -o-transition: .3s;
-        }
-
-        &.nav-link.active {
-          &::before {
-            width: 120%;
-          }
+          width: 120%;
         }
       }
     }
   }
-  .project_img{
-    img{
-      max-width: 100%;
-    }
+}
+.project_img {
+  img {
+    max-width: 100%;
   }
-  .project_info{
-    span{
-      font-size: 12px;
-      line-height: 14px;
-      color: #7A849A;
-    }
-    h3 {
-      color: #3E424B;
-      font-size: 46px;
-      font-weight: 600;
-      font-family: 'Oswald', sans-serif;
-      padding-bottom: 40px;
-      line-height: 55px;
+}
+.project_info {
+  span {
+    font-size: 12px;
+    line-height: 14px;
+    color: #7a849a;
   }
-  .v_project{
-    color: #3E424B;
+  h3 {
+    color: #3e424b;
+    font-size: 46px;
+    font-weight: 600;
+    font-family: 'Oswald', sans-serif;
+    padding-bottom: 40px;
+    line-height: 55px;
+  }
+  .v_project {
+    color: #3e424b;
     line-height: 14px;
     font-size: 12px;
     letter-spacing: 8px;
     text-transform: uppercase;
   }
-  }
+}
