--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -23,7 +23,7 @@
         width: 100%;
         height: 100%;
         transform-style: preserve-3d;
-        transition: all 1.2s ease;
+        transition: all 0.9s ease-in-out;
         border: 1.5px solid #3e424b;
 
         .front_part {
@@ -88,33 +88,13 @@
           border: transparent;
         }
       }
-
-      //   .box_head {
-      //     h2 {
-      //       font-size: 84px;
-      //       line-height: 110px;
-      //       text-align: center;
-      //       font-family: 'Oswald', sans-serif;
-      //       text-transform: uppercase;
-      //     }
-      //   }
-      //   .box_overlay {
-      //     visibility: hidden;
-      //     pointer-events: none;
-      //     height: 0;
-      //   }
-      //   &:hover {
-      //     .box_overlay {
-      //       visibility: visible;
-      //       height: 100%;
-      //     }
-      //   }
     }
 
     .mb-30 {
       margin-bottom: 30px;
 
-      @media (max-width: 1024px) {}
+      @media (max-width: 1024px) {
+      }
     }
   }
 }
@@ -134,10 +114,15 @@
   }
 }
 
-.mb-30{
+.mb-30 {
   margin-bottom: 30px;
 }
 /* brand_area part end */
 
 /* ?? part start */
 /* ?? part end */
+
+
+/* media query part start */
+@import './media';
+/* media query part end */
