--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -103,6 +103,7 @@
 
 /* brand_area part start */
 #brand_area {
+  // padding: 90px 0px !important;
   .container {
     .brand_slider {
       .single_brand {
