--- a/assets/scss/_config.scss
+++ b/assets/scss/_config.scss
@@ -25,6 +25,9 @@ button {
   &:hover {
     @extend button;
   }
+  &:focus{
+    @extend button
+  }
 }
 
 /* container */
@@ -53,11 +56,17 @@ body {
   padding-bottom: 70px;
   font-family: 'Oswald', sans-serif;
   text-transform: uppercase;
+  @media(max-width: 575px) {
+    font-size: 68px;
+  }
 }
 
 section {
   position: relative;
-  padding: 60px 0px;
+  padding: 200px 0px !important;
+  @media(max-width: 1024px) {
+    padding: 120px 0px !important;
+  }
 }
 
 .text_stroke {
@@ -74,6 +83,7 @@ section {
   padding: 16px;
   font-weight: 600;
   text-transform: uppercase;
+  display: inline-block;
   &:hover {
     color: #3e424b;
   }
@@ -104,7 +114,9 @@ section {
   transform: translate(-55%);
   display: flex !important;
   justify-content: center;
-  padding-top: 60px;
+  @media(max-width:1024px) {
+    bottom: -75px;
+  }
   li {
     width: 8px;
     height: 8px;
@@ -112,6 +124,8 @@ section {
     margin: 0px 5px;
     border: 1px solid #3e424b;
     transition: all 0.6s linear;
+    cursor: pointer;
+    
     &.slick-active {
       background-color: #3e424b;
       width: 16px;
@@ -130,6 +144,9 @@ section {
   align-items: center;
   justify-content: center;
   padding-bottom: 95px;
+  @media(max-width:1024px){
+    padding-bottom: 35px;
+  }
   li {
     display: flex;
     align-items: center;
@@ -141,6 +158,9 @@ section {
     height: 48px;
     transition: all 0.6s ease-in-out;
     position: relative;
+    @media(max-width: 575px) {
+      margin: 0px 4px;
+    }
     a {
       text-align: center;
       margin: 0;
